--- a/client/src/App.css
+++ b/client/src/App.css
@@ -1,5 +1,10 @@
 .App {
   text-align: center;
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
+  align-items: center;
+  align-content: center;
 }
 
 .App-logo {
@@ -11,8 +16,11 @@
   display: flex;
   flex-wrap: wrap;
   justify-content: center;
+  align-items: center;
+  align-content: center;
   margin: 5em;
   padding: 1em;
+  max-width: 80w;
   /* overflow: scroll; */
 }
 
@@ -22,12 +30,12 @@
   flex-direction: column;
   justify-content: center;
   height: 300px;
-  /* margin: 1em;
-  padding: 2em; */
+  /* margin: 1em; */
+  padding: 2em;
 }
 
 .forecast-card > p {
-  /* width: 200px; */
+  max-width: 200px;
 }
 
 
