--- a/client/src/App.css
+++ b/client/src/App.css
@@ -14,14 +14,10 @@
 
 .forecast-container {
   display: flex;
-  flex-wrap: wrap;
-  justify-content: center;
-  align-items: center;
-  align-content: center;
-  margin: 5em;
+  margin: 0 5em 5em 5em;
   padding: 1em;
-  max-width: 80w;
-  /* overflow: scroll; */
+  max-width: 80vw;
+  overflow: auto;
 }
 
 .forecast-card {
@@ -29,9 +25,10 @@
   display: flex;
   flex-direction: column;
   justify-content: center;
-  height: 300px;
-  /* margin: 1em; */
-  padding: 2em;
+  height: auto;
+  max-height: 350px;
+  margin: 1.5em;
+  padding: 1em 4em;
 }
 
 .forecast-card > p {
