--- a/client/src/App.css
+++ b/client/src/App.css
@@ -22,17 +22,36 @@
 
 .forecast-card {
   box-shadow: 1px 1px 10px #dddddd;
+  border-radius: 10px;
   display: flex;
   flex-direction: column;
   justify-content: center;
+  align-items: center;
   height: auto;
-  max-height: 350px;
+  max-height: 450px;
   margin: 1.5em;
   padding: 1em 4em;
 }
 
+img {
+  height: 100px;
+  width: 100px;
+}
+
 .forecast-card > p {
   max-width: 200px;
+}
+
+.forecast-temp {
+  display: flex;
+  justify-content: center;
+}
+
+.temperature {
+  display: flex;
+  flex-direction: column;
+  margin: 10px;
+  font-size: 24px;
 }
 
 
