--- a/src/App.css
+++ b/src/App.css
@@ -31,7 +31,8 @@ nav {
 .submit-button {
   background-color: #191970;
   color: white;
-  font-size: 15px;
+  font-size: 16px;
+  font-family: 'Roboto Condensed';
   padding: 18px;
   margin-left: 5px;
   border: none;
